include(CTest)
enable_testing()

add_executable(accumulator Fundamentals/Accumulator.cpp)
add_executable(bag Fundamentals/Bag.cpp)
#add_executable(binary-search Fundamentals/BinarySearch.cpp)
add_executable(counter Fundamentals/Counter.cpp)
add_executable(date Fundamentals/Date.cpp)
add_executable(interval-1d Fundamentals/Interval1D.cpp)
add_executable(interval-2d Fundamentals/Interval2D.cpp)
add_executable(knuth Fundamentals/Knuth.cpp)
add_executable(linked-stack Fundamentals/LinkedStack.cpp)
#add_executable(point-2d Fundamentals/Point2D.cpp)
#add_executable(resizing-array-stack Fundamentals/ResizingArrayStack.cpp)
#add_executable(stack Fundamentals/Stack.cpp)
add_executable(transaction Fundamentals/Transaction.cpp)
add_executable(vector Fundamentals/Vector.cpp)
add_executable(stdin Misc/StdIn.cpp)
add_executable(stdout Misc/StdOut.cpp)
add_executable(std-random Misc/StdRandom.cpp)

target_link_libraries(accumulator algs4cpp)
target_link_libraries(bag algs4cpp)
#target_link_libraries(binary-search algs4cpp)
target_link_libraries(counter algs4cpp)
target_link_libraries(date algs4cpp)
target_link_libraries(interval-1d algs4cpp)
target_link_libraries(interval-2d algs4cpp)
target_link_libraries(knuth algs4cpp)
target_link_libraries(linked-stack algs4cpp)
#target_link_libraries(point-2d algs4cpp)
#target_link_libraries(resizing-array-stack algs4cpp)
#target_link_libraries(stack algs4cpp)
target_link_libraries(transaction algs4cpp)
target_link_libraries(vector algs4cpp)
target_link_libraries(stdin algs4cpp)
target_link_libraries(stdout algs4cpp)
target_link_libraries(std-random algs4cpp)

add_test(NAME Accumulator COMMAND accumulator)
add_test(NAME Bag COMMAND bag)
#add_test(NAME BinarySearch COMMAND binary-search)
add_test(NAME Counter COMMAND counter)
add_test(NAME Date COMMAND date)
add_test(NAME Interval1D COMMAND interval-1d)
add_test(NAME Interval2D COMMAND interval-2d)
add_test(NAME Knuth COMMAND knuth)
add_test(NAME LinkedStack COMMAND linked-stack)
#add_test(NAME Point2D COMMAND point-2d)
add_test(NAME ResizingArrayStack COMMAND resizing-array-stack)
#add_test(NAME Stack COMMAND stack)
#add_test(NAME Transaction COMMAND transaction)
add_test(NAME Vector COMMAND vector)
add_test(NAME StdIn COMMAND stdin)
add_test(NAME StdOut COMMAND stdout)
add_test(NAME StdRandom COMMAND std-random)